--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
    
   
-<h2>This blog I write about the Sun's immense thermal power namely the solar power and uses of it.</h2>
+<h2>This blog is about the Sun's immense thermal power namely the solar power and uses of it.</h2>
             There are so many uses for sun light, which include:
 <ol>
     <li>We get lighting during day time</li>
